--- a/HTML/ejemplos_clase/divspamtpc.html
+++ b/HTML/ejemplos_clase/divspamtpc.html
@@ -5,15 +5,15 @@
 			<title>Ejemplo %</title>
 	</head>
 	<body>
-		<div style="background-color:rgba(200,0,0,0.2);position:absolute;height:90px;width:500px;">
+		<div style="background-color:rgba(200,0,0,0.2);position:absolute;height:90px;width:80%;left:10%;text-align:center;border:1px solid red;">
 		<h1>Ejemplo sencillo de div's</h1>
 	    </div>
-	    <div style="position:absolute;top:100px;">
+	    <div style="position:absolute;top:100px;width:10%;left:10%;">
 	    	Menu:<br>
 	    	<a href="#">Opción A</a> <br>
 	    	Opción B <br>
 	    </div>
-		<div style="background-color:rgb(220,245,230);width:400px;position:absolute;left:100px;top:100px;">
+		<div style="background-color:rgb(220,245,230);width:70%;position:absolute;left:20%;top:100px;">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore <span id="frase_uno" style="color:rgb(255,40,230);">et dolore magna <strong>aliqua</strong></span>. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
