--- a/CSS/ejemplos/selectores/selectores.html
+++ b/CSS/ejemplos/selectores/selectores.html
@@ -8,18 +8,25 @@
 	</head>
 	<body>
 		<h1 class="importante">Selectores CSS</h1>
-		<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="importante">Lorem ipsum dolor sit amet,  consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		proident, sunt <span>in culpa qui officia deserunt</span> mollit anim id est laborum.</p>
 		<h2>Universal</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		<p  id="segundo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <span>sed do eiusmod
+		tempor incididunt ut labore et dolore <strong>magna aliqua</strong>. Ut enim ad minim veniam </span>,
+		quis nostrud exercitation ullamco <strong>laboris</strong> nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+		<p >Lorem ipsum dolor sit amet, consectetur adipisicing elit,<a href="#">sed do eiusmod
+		tempor </a> ut labore et dolore . Ut enim ad minim veniam ,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+		<h3>Final de la página</h3>
 	</body>
 </html>
